<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name" translatable="false">Xplayer</string>
    <string name="playback_channel_name" translatable="false">Playback</string>
    <string name="xplayer_description">Xplayer Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reciters">Reciters</string>
    <string name="listenTo">Listen</string>
    <string name="radio">Live Broadcast</string>
    <string name="reciter">Reciter</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="shortcut_created">Shortcut created</string>
    <string name="buffering">buffering…</string>
    <string name="nothing_to_play">Nothing To Play</string>
    <string name="name">Name</string>
    <string name="play">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="failed_creating_list">Failed creating playlist</string>
    <string name="home">Home</string>
    <string name="playlist">Playlist</string>
    <string name="most_stared">Most Stared</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="new_playlist">New playlist</string>
    <string name="new_item">New</string>
    <string name="no_saved_playlist">No Saved Playlist</string>
    <string name="failed">Failed</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="retry">Retry</string>
    <string name="no_data">No data</string>
    <string name="connection_error">Connection Error</string>
    <string name="connection_error_full_msg">Check your mobile data or Wi-Fi and try again, if the problem presiste
        contact support.</string>
    <string name="no_media_downloaded">No media has been downloaded yet</string>
    <string name="sign_in">Sign in</string>
    <string name="you_haven_t_signed_in_yet">You haven\'t signed in yet</string>
    <string name="create">Create</string>
    <string name="signed_in">Singed in</string>
    <string name="hi">Hi</string>
    <string name="download_started">Downloading started…</string>
    <string name="tools_surah_al_anam">Al-An\'am</string>
    <string name="tools_reciter_maharialafasy">Mahari Alafasy</string>
    <string name="cancel_downloaded">Cancel Downloaded</string>
    <string name="select_playlist">Select Playlist</string>
    <string name="history">History</string>
    <string name="failed_updating_playlist">Failed updating playlist!</string>
    <string name="search">Search</string>
    <string name="activity">Activity</string>
    <string name="more">More</string>
    <string name="play_all">Play all</string>
    <string name="already_downloading_surah">Surah is Already Downloading</string>
    <string name="recent_play">Recent Play</string>
</resources>

