<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/you_haven_t_signed_in_yet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/createAccountButton"
                app:cornerRadius="@dimen/buttons_radius"
                android:layout_marginTop="24dp"
                app:backgroundTint="@color/colorAccentLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/create"
                android:textColor="?textWithBackgroundColor" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/signInButton"
                app:cornerRadius="@dimen/buttons_radius"
                android:layout_marginTop="8dp"
                app:backgroundTint="?colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="?textWithBackgroundColor"
                />
    </LinearLayout>

</FrameLayout>