<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:animateLayoutChanges="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
            android:id="@+id/homeNestedScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?actionBarSize"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingBottom="?actionBarSize">

            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="18dp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/recentTitle"
                        style="@style/AppTheme.Text.HeadLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/recent_play"
                        android:visibility="gone"
                        tools:visibility="visible" />

                <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/moreRecent"
                        android:visibility="gone"
                        tools:visibility="visible"
                        style="@style/AppTheme.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        app:icon="@drawable/ic_play" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recentRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:isScrollContainer="false"
                    android:layoutAnimation="@anim/layout_animation_fall_down"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="4"
                    tools:layoutAnimation="@null"
                    tools:listitem="@layout/item_recent_media"
                    tools:targetApi="lollipop" />

            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />

            <fragment
                    android:id="@+id/radioHomeFragment"
                    android:name="com.brilliancesoft.xplayer.ui.home.radio.RadioMoreFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout="@layout/fragment_more_radio" />

            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />

            <fragment
                    android:id="@+id/recitersHomeFragment"
                    android:name="com.brilliancesoft.xplayer.ui.home.reciter.ReciterMoreFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout="@layout/fragment_more_reciter" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.card.MaterialCardView
            android:id="@+id/homeAppBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:cardCornerRadius="0dp"
            app:elevation="16dp">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/homeToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                    style="@style/AppTheme.Text.HeadLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/colorTextSecondary"
                    app:drawableStartCompat="@drawable/ic_logo_24dp"
                    app:drawableTint="@color/colorPrimary" />
        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>

    <include
            layout="@layout/layout_connection"
            tools:visibility="gone" />

    <include
            layout="@layout/layout_empty_data_text"
            tools:visibility="gone" />
</RelativeLayout>

